--- a/Down To Discuss/Base.lproj/Main.storyboard
+++ b/Down To Discuss/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1CM-pe-bLm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-65" y="1406"/>
+            <point key="canvasLocation" x="-599" y="1263"/>
         </scene>
         <!--Create Discussion-->
         <scene sceneID="kzI-J7-kqG">
@@ -117,11 +117,11 @@
                                 <rect key="frame" x="198" y="531" width="150" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="CREATE" backgroundImage="cancelButton.png">
+                                <state key="normal" title="CREATE" backgroundImage="create.png">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="49e-Tb-3d3" kind="show" id="2Gd-wR-NdS"/>
+                                    <segue destination="49e-Tb-3d3" kind="show" id="j47-iS-dB2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oC1-fE-F6F">
@@ -152,9 +152,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="addMeetup" id="qwp-Pm-4TU">
-                        <inset key="imageInsets" minX="-4" minY="6" maxX="0.0" maxY="-9"/>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="n7s-xb-jGy"/>
                     <connections>
                         <outlet property="createButton" destination="QUg-S6-512" id="zzH-TA-vmb"/>
                         <outlet property="disName" destination="KsN-z3-99V" id="Khd-8z-90I"/>
@@ -164,7 +162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ivx-Gs-lgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="1396.5517241379312"/>
+            <point key="canvasLocation" x="476" y="1989"/>
         </scene>
         <!--Intense Topic-->
         <scene sceneID="KrW-Um-8U4">
@@ -181,11 +179,8 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qF1-ye-Tlt">
                                 <rect key="frame" x="16" y="28" width="78" height="24"/>
                                 <state key="normal" title="Button" image=" Back Arrow.png"/>
-                                <connections>
-                                    <segue destination="IYa-y8-M2b" kind="show" id="XBb-vu-bsb"/>
-                                </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dva-5P-QVo">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dva-5P-QVo">
                                 <rect key="frame" x="0.0" y="60" width="375" height="607"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -193,7 +188,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bDC-vK-TGn" id="ISZ-jf-NDn">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -214,13 +209,10 @@
                             <constraint firstAttribute="trailing" secondItem="Dva-5P-QVo" secondAttribute="trailing" id="qAM-ag-cHI"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <segue destination="IYa-y8-M2b" kind="show" identifier="segue" id="7dt-9v-miO"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t7v-9O-dL8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1473" y="1903"/>
+            <point key="canvasLocation" x="2412" y="1902.9985007496252"/>
         </scene>
         <!--Fun Topic-->
         <scene sceneID="dKZ-qk-4Zb">
@@ -237,9 +229,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r4t-Jp-5gz">
                                 <rect key="frame" x="16" y="28" width="78" height="24"/>
                                 <state key="normal" title="Button" image=" Back Arrow.png"/>
-                                <connections>
-                                    <segue destination="IYa-y8-M2b" kind="show" id="4Bb-H7-Aaj"/>
-                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cIo-D8-iy3">
                                 <rect key="frame" x="0.0" y="60" width="375" height="607"/>
@@ -249,7 +238,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xx5-Yx-Ewd" id="gn2-da-SbJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -270,13 +259,10 @@
                             <constraint firstItem="cIo-D8-iy3" firstAttribute="top" secondItem="r4t-Jp-5gz" secondAttribute="bottom" constant="8" id="mSH-mm-Thb"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <segue destination="IYa-y8-M2b" kind="show" identifier="segueFun" id="LDX-js-jkB"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u8e-BI-uuM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1472.8" y="1152.7736131934034"/>
+            <point key="canvasLocation" x="2412" y="1152.7736131934034"/>
         </scene>
         <!--Home-->
         <scene sceneID="wg7-f3-ORb">
@@ -375,13 +361,34 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
-                        <segue destination="IYa-y8-M2b" kind="relationship" relationship="viewControllers" id="arX-UH-4Md"/>
+                        <segue destination="G0t-qc-kWu" kind="relationship" relationship="viewControllers" id="arX-UH-4Md"/>
                         <segue destination="BjZ-si-5eC" kind="relationship" relationship="viewControllers" id="xZA-r8-ToN"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-250" y="359"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HUG-2V-NdK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G0t-qc-kWu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="addMeetup" id="qwp-Pm-4TU">
+                        <inset key="imageInsets" minX="-4" minY="6" maxX="0.0" maxY="-9"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rgd-Mi-HW6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IYa-y8-M2b" kind="relationship" relationship="rootViewController" id="W18-bF-6GQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iBt-vs-M1x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="476" y="1262.5187406296852"/>
         </scene>
     </scenes>
     <resources>
@@ -389,13 +396,13 @@
         <image name="Rectangle.png" width="320" height="54"/>
         <image name="addMeetup" width="30" height="30"/>
         <image name="cancelButton.png" width="140" height="63"/>
+        <image name="create.png" width="140" height="63"/>
         <image name="homeIcon" width="30" height="30"/>
         <image name="leadBoard2" width="30" height="30"/>
         <image name="profile" width="30" height="30"/>
         <image name="x-mark-3-xxl" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LDX-js-jkB"/>
-        <segue reference="dMA-MY-EcQ"/>
+        <segue reference="j47-iS-dB2"/>
     </inferredMetricsTieBreakers>
 </document>
